# MyCppLibs

./: README.md  TODO.txt
GMP/lib/: libgmp.la  libgmp.so.10.1.3
my/: CMakeLists.txt
my/OGL/: CMakeLists.txt
my/OGL/component/: GlutKeyboardCallback.hpp  KeyboardHandler.hpp  camera.cpp  camera.hpp  coord.cpp  coord.hpp  deltaTimer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  movable.cpp  movable.hpp  shader.hpp
my/OGL/shaders/: CoordShader.fs  CoordShader.vs  SimpleShader.fs
my/concurrent/: blocking_safe_queue.hpp
my/configuration/: ConfigLoader.hpp
my/logger/: CMakeLists.txt  logger.cpp  logger.hpp
my/network/: CMakeLists.txt  client.cpp  client.hpp  server.cpp  server.hpp
my/pattern/: builder.hpp  factory.hpp  observator.hpp  singleton.hpp  util.hpp
my_exemple/pattern/: builder_example.cpp
